fix: correção nos endereços dos endpoints
